<resources>
    <string name="app_name">Cars</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="service_description">Service to upload photos to Car</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert_id">Please insert your ID number:</string>
    <string name="connect">Connect</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="dateOfBirth">Age</string>
    <string name="please_wait">Please Wait</string>
    <string name="error_firstname">ERROR: First Name</string>
    <string name="error_lastname">ERROR: Last Name</string>
    <string name="error_age">ERROR: dateOfBirth must be 18 or bigger</string>
    <string name="updating_details">Updating Details</string>
    <string name="retry">Retry</string>
    <string name="error_when_updating_details">Error when updating details</string>
    <string name="connected">Connected</string>
    <string name="error_connect">Error in connection</string>
    <string name="IDnumber">ID</string>
    <string name="error_idnumber">ERROR: ID number</string>
    <string name="send_data_to_server">Send Data to server</string>
    <string name="wait_to_ok_from_server">Wait to OK from server</string>
    <string name="full_name">Full name</string>
    <string name="age">Age</string>
    <string name="date">Date</string>
    <string name="car">Car</string>
    <string name="car_number">Car number</string>
    <string name="order_new_rent">Order now</string>
    <string name="my_account">My Account</string>
    <string name="manage_database">Manage Database</string>
    <string name="next_rents">Next Rents</string>
    <string name="manage">Manage</string>
    <string name="brand">Brand</string>
    <string name="color">Color</string>
    <string name="park_location">Park location</string>
    <string name="is_young_driver">Is young driver</string>
    <string name="error_brand">ERROR: brand</string>
    <string name="error_color">ERROR: color</string>
    <string name="error_parklocation">ERROR: park location</string>
    <string name="error_carnumber">ERROR: car number</string>
    <string name="success">success</string>
    <string name="addcar_title">Add Car</string>
    <string name="customer_details_edit">Edit details</string>
    <string name="customer_main_title">My Account</string>
    <string name="menuitem_unavilable">Not available</string>
    <string name="order_title">Create order</string>
    <string name="dateFirst">Date first</string>
    <string name="is_one_day">One day</string>
    <string name="dateend">Date end</string>
    <string name="order_dates_frag_title">Dates</string>
    <string name="Previous">Previous</string>
    <string name="send">Send</string>
    <string name="next_button">Next</string>
    <string name="order_caravail_title">Cars availables</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="price">Price</string>
    <string name="seat_count">Seat count</string>
    <string name="engine_capacity">Engine Capacity</string>
    <string name="error_with_some_numbers">Error with some numbers</string>
    <string name="error_name">ERROR: name</string>
    <string name="error_price">ERROR: price</string>
    <string name="error_seatcount">ERROR: seat count</string>
    <string name="error_enginecapacity">ERROR:Eengine Capacity</string>
    <string name="error_youngprice">ERROR: young price</string>
    <string name="addtarrif_title">Add Tarrif</string>
    <string name="young_price">Young price</string>
    <string name="error_select_tarrif">ERROR: Must select Tarrif</string>
    <string name="NIS">NIS</string>
    <string name="not_found_cars">Cars not found</string>
    <string name="order_details">Order Details</string>
    <string name="order_details_title">Rent Details</string>
    <string name="order_details_dates">Dates</string>
    <string name="order_details_car">Car</string>
    <string name="start_date">From</string>
    <string name="end_date">To</string>
    <string name="send_pictures">Send pictures</string>
    <string name="take_picture">Take picture</string>
    <string name="error_select_car">Car not selected</string>
    <string name="search_for_car">Search for car</string>
    <string name="search_for_rent">Search for rent</string>
    <string name="Not_found_photo">Not found photo</string>
    <string name="no_details">No details</string>
    <string name="add_photo">Add photo</string>
    <string name="save">Save</string>
    <string name="show_sign">Show sign</string>
    <string name="sign">signature</string>
    <string name="signature">signature</string>
    <string name="clear">Clear</string>
    <string name="activate">Activate</string>
    <string name="apilevel_low">Your android version is Low</string>
    <string name="alert">ALERT!!</string>
    <string name="you_must_save">You must save this file!!!!</string>
    <string name="send_file_to">Send file to...</string>
    <string name="make_rent_activeated">Make rent activated</string>
    <string name="create_contract">Create contract</string>
    <string name="cant_create_contract">Can\'t create contract</string>
    <string name="upload_contract">Upload contract</string>
    <string name="cant_upload_contract">Can\'t upload contract</string>
    <string name="cant_make_activated">Can\'t make rent activated</string>
    <string name="not_have_camera">This device does not have a camera.</string>
    <string name="have_update">Have update</string>
    <string name="remined">remined</string>
    <string name="pictures">pictures</string>
    <string name="upload_photo">Uploading photo</string>
    <string name="deepLink" translatable="false">http://cars-ab1f8.firebaseapp.com</string>
    <string name="not_found_data">Data not found</string>
    <string name="select_customer_title">Select customer</string>
</resources>
