<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/common_google_signin_btn_icon_light_normal"
            android:title="@string/connect" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_add"
            android:title="@string/order_new_rent" />
        <item
            android:id="@+id/nav_car"
            android:title="@string/car"/>
        <item
            android:id="@+id/nav_myaccount"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_nextrents"
            android:icon="@drawable/ic_action_calendar_day"
            android:title="@string/next_rents" />
        <item
            android:id="@+id/nav_managedb"
            android:icon="@drawable/ic_action_database"
            android:title="@string/manage_database" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
