<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rothkoff.baruch.cars.order.DatesFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frag_order_edit_datestart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateFirst"
            android:inputType="date"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <Switch
        android:id="@+id/frag_order_switch_oneday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/is_one_day"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/frag_order_input_dateend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <EditText
            android:id="@+id/frag_order_edit_dateend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateend"
            android:inputType="date"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
