<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rothkoff.baruch.cars.AddCarFragment">

    <!--Error Text-->
    <TextView
        android:id="@+id/frag_addcar_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <!--Brand & Color-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/frag_addcar_edit_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brand"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/frag_addcar_edit_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <!--Park Location-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frag_addcar_edit_parklocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/park_location"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <!--Car Number-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frag_addcar_edit_carnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/car_number"
            android:inputType="numberSigned" />
    </android.support.design.widget.TextInputLayout>

    <!--Is Young Driver-->
    <Switch
        android:id="@+id/frag_addcar_isyoung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/is_young_driver" />

    <Spinner
        android:id="@+id/frag_addcar_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/frag_addcar_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_save"/>

</LinearLayout>
