<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustPan"
    tools:context="rothkoff.baruch.cars.AddTarrifFragment">

    <!--Error Text-->
    <TextView
        android:id="@+id/frag_addtarrif_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <!--Name-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frag_addtarrif_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <!--Price-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frag_addtarrif_edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <!--Seat Count-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frag_addtarrif_edit_seatcount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/seat_count"
            android:inputType="numberSigned"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <!--Engine Capacity-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frag_addtarrif_edit_enginecapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/engine_capacity"
            android:inputType="numberSigned"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <!--Young Price-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/frag_addtarrif_conteiner_youngprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/frag_addtarrif_edit_youngPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/young_price"
            android:inputType="numberDecimal"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/frag_addtarrif_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_save"/>

</LinearLayout>
